--- a/views/attendance/attendance-details.ejs
+++ b/views/attendance/attendance-details.ejs
@@ -1,9 +1,9 @@
-<%- include('./includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/assets/css/<%= css %>.css">
 </head>
 
 <body>
-<%- include('./includes/navigation.ejs') %>
+<%- include('../includes/navigation.ejs') %>
 
 <div class="attendance-content">
 <strong><h2>Ngày làm việc: <%= attendance.date %></h2></strong>
@@ -49,4 +49,4 @@
 
     </div>        
 
-<%- include('./includes/footer.ejs') %>
+<%- include('../includes/footer.ejs') %>
