--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,1 +1,31 @@
-<h1>Login</h1>
+<%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/assets/css/<%= css %>.css">
+
+</head>
+
+<body>
+    <%- include('../includes/navigation.ejs') %>
+    <main>
+        <div class="login-container">
+            <form class="login-form" action="/login" method="POST">
+                <div class="form-group">
+                    <label for="email">E-Mail</label>
+                    <input type="email" class="form-control" name="email" id="email">
+                </div>
+
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input 
+                    type="password" class="form-control" name="password" id="password">
+                </div>                
+         
+                <button class="btn btn-warning" type="submit">Login</button>     
+            </form>
+            <div class="centered">
+                <a href="/reset"> Reset Password</a>
+            </div>
+        </div>
+    </main>
+<%- include('../includes/footer.ejs') %>
+
+
