--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -19,7 +19,7 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   crossorigin="anonymous"
 ></script>
-
-<script type="module" src="/assets/js/main.js"></script>
+ 
+<script type="module" src="/assets/js/main.js" defer></script>
 </body>
 </html>
