--- a/views/user/user-detail.ejs
+++ b/views/user/user-detail.ejs
@@ -20,14 +20,14 @@
               <p>Bộ phận: <%= user.department %></p>
               <p>Số ngày nghỉ phép: <%= user.annualLeave %></p>
       </div>
-  
     </div>
     <div class="button">
-      <form action="/user-detail" method="POST" enctype="multipart/form-data">
+      <form action="/user-detail/?_csrf=<%=csrfToken%>" method="POST" enctype="multipart/form-data">
         <div class="imageUpload">
              <input type="file" class="form-control" name="image" id="imageUpload" >
         </div>
         <div class="saveImg">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
             <button class="btn btn-primary" type="submit">Save</button>
             <button class="btn btn-warning" type="button" id="cancel">Cancel</button>
         </div>
@@ -58,6 +58,7 @@
             </div>
             <div class="saveImg">
               <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
                 <button class="btn btn-primary" type="submit">Save</button>
                 <button class="btn btn-warning" type="button" id="cancel">Cancel</button>
             </div>
