OK pagination statistics page

--- a/views/statistics/statistics.ejs
+++ b/views/statistics/statistics.ejs
@@ -141,9 +141,10 @@
                 </tfoot>
             </table>
 
-
-        <%- include('../includes/pagination.ejs', {currentPage, hasNextPage, hasPrevPage, nextPage, prevPage, lastPage, itemsPerPage}) %><%} %>
-    </div>
+        <% if ( type === 'details') { %>
+            <%- include('../includes/pagination.ejs', {currentPage, hasNextPage, hasPrevPage, nextPage, prevPage, lastPage, itemsPerPage}) %><%} %>
+        <% } %>    
+        </div>
 </div>
 
 <%- include('../includes/footer.ejs') %>
