--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -53,6 +53,11 @@
             <h4>Dữ liệu giờ làm</h4>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/statistics-confirm">
+            <h4>Xác nhận dữ liệu giờ làm</h4>
+          </a>
+        </li>
       </ul>
     </div>
 
