--- a/views/attendance/attendance.ejs
+++ b/views/attendance/attendance.ejs
@@ -8,7 +8,9 @@
 <div class="home attendance" >
   <div class="wrapper">
     <div class="card">
-      <img class="card-img" src="<%= user.image[0] %>" alt="Employee_ID">
+      <div class="card-img">
+        <img class="attendance-img" src="<%= user.image[0] %>" alt="Employee_ID">
+      </div>
       <% if (user.isWorking) { %>
           <span class="status online">IN</span>
         <% } else { %>
