--- a/public/assets/css/attendance-details.css
+++ b/public/assets/css/attendance-details.css
@@ -1,5 +1,3 @@
-
-
 table,
 tr,
 th,
@@ -27,6 +25,14 @@ td {
 }
 
 .fa-download {
-  margin-right: .5rem;
-  
+  margin-right: 0.5rem;
+}
+
+@media screen and (min-width: 992px) {
+  table,
+  tr,
+  th,
+  td {
+    font-size: 1.25rem;
+  }
 }
